--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "node-libcurl": "^2.3.4",
     "nodemailer": "^6.7.3",
     "rate-limiter": "^0.2.0",
     "xss-clean": "^0.1.1"
